--- a/src/components/FloatingAction/style.scss
+++ b/src/components/FloatingAction/style.scss
@@ -2,4 +2,7 @@
     position: absolute;
     bottom: 32px;
     right: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
   }
