chore: add state for selected item, hide labels when Item selected, change css accordingly

--- a/src/components/FabMenuItem/style.scss
+++ b/src/components/FabMenuItem/style.scss
@@ -16,3 +16,12 @@
       font-weight: 500;
     }
   }
+
+.fab-menu-item-container-selected {
+    // Style for selected item
+  }
+  
+  .fab-menu-item-container-horizontal {
+    margin-bottom: 0px;
+    margin-right: 16px;
+  }
