--- a/src/components/FloatingAction/style.scss
+++ b/src/components/FloatingAction/style.scss
@@ -6,7 +6,14 @@
     flex-direction: column;
     align-items: end;
   }
-
-  .floating-action-container-row {
+  
+  .floating-action-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+  }
+  
+  .floating-action-menu-row {
+    display: flex;
     flex-direction: row;
   }
