--- a/src/components/Form/Button/style.scss
+++ b/src/components/Form/Button/style.scss
@@ -1,11 +1,16 @@
 .button {
-    width: fit-content;
-    padding: 10px 20px 10px 20px;
-    border-radius: 4px;
-    background-color: #0f0f0f;
-    opacity: 0.6;
-    color: #f8f8f8;
-    font-weight: 600;
-    cursor: pointer;
-    align-self: flex-end;
-  }
+  width: fit-content;
+  padding: 10px 20px 10px 20px;
+  border-radius: 4px;
+  background-color: #0f0f0f;
+  color: #f8f8f8;
+  font-weight: 600;
+  cursor: pointer;
+  align-self: flex-end;
+}
+
+.button-disabled {
+  cursor:not-allowed;
+  background-color: #0f0f0f;
+  opacity: 0.6;
+}
