--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,9 @@
     box-shadow: 0px 4px 4px 0px #ffffff40;
   }
 }
+
+@media only screen and (max-width: 48em){
+  .navbar{
+    align-items: center;
+  }
+}
