--- a/src/components/FabCard/style.scss
+++ b/src/components/FabCard/style.scss
@@ -4,9 +4,19 @@
     width: 430px;
     background-color: #f8f8f8;
     padding: 24px 16px 24px 16px;
-    border-radius: 8px;
+    border-radius: 9px;
     box-shadow: -2px 4px 16px 0px #00000029;
     margin-bottom: 16px;
+    animation: fadeIn 1s ease-in;
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
   
     .heading {
       color: #4d4d4d;
@@ -23,5 +33,26 @@
     .content {
       display: flex;
       flex-direction: column;
+    }
+  }
+
+  @media only screen and (max-width: 48em){
+    .fab-card-container{
+      width: 80vw;
+      margin-bottom: 0;
+      margin-top: 5vw;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      animation: popUp 1s ease forwards;
+    }
+    @keyframes popUp {
+      from {
+        transform: translateY(100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
     }
   }
