--- a/src/components/FloatingAction/style.scss
+++ b/src/components/FloatingAction/style.scss
@@ -17,6 +17,7 @@
     border-radius: 8px;
     margin-bottom: 16px;
     position: relative;
+    animation: slideInFromRight 1s ease forwards;
 
     .triangle {
       width: 0;
@@ -28,6 +29,17 @@
       bottom: -10px;
       right: 20px; /* Position at the bottom right corner */
     }
+
+    @keyframes slideInFromRight {
+      from {
+        transform: translateX(100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
   }
 }
   
@@ -35,9 +47,30 @@
   display: flex;
   flex-direction: column;
   align-items: end;
+  animation: fadeIn 1s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .floating-action-menu-row {
   display: flex;
   flex-direction: row;
+}
+@media only screen and (max-width: 48em){
+  .fab-menu-mobile-item{
+    flex-direction: column-reverse;
+    bottom: 0;
+    
+  }
+
+  .floating-action-menu-row{
+    margin-bottom: 0;
+  }
 }
