--- a/src/components/FloatingAction/style.scss
+++ b/src/components/FloatingAction/style.scss
@@ -1,5 +1,5 @@
 .floating-action-container {
-  position: absolute;
+  position: fixed;
   bottom: 32px;
   right: 32px;
   display: flex;
@@ -63,11 +63,13 @@
   display: flex;
   flex-direction: row;
 }
+
 @media only screen and (max-width: 48em){
   .fab-menu-mobile-item{
     flex-direction: column-reverse;
     bottom: 0;
-    
+    right: 5%;
+    left: 5%;
   }
 
   .floating-action-menu-row{
