--- a/src/App.scss
+++ b/src/App.scss
@@ -6,11 +6,13 @@
   background-color: $mainBlack;
   position: relative;
   display: flex;
+  flex-direction: column;
 
   .navbar {
     display: flex;
-    flex-direction: column;
-    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     height: fit-content;
     padding: 16px 20px 16px 20px;
     color: #f8f8f8;
@@ -18,6 +20,16 @@
     box-shadow: 0px 4px 4px 0px #ffffff40;
   }
 
+  .login-btn {
+    height: fit-content;
+    background-color: green;
+    padding: 18px;
+    cursor: pointer;
+    border-radius: 5%;
+  }
+  .login-btn:hover{
+    background-color: rgb(7, 81, 7);
+  }
 }
 
 @media only screen and (max-width: 48em){
