--- a/src/components/Form/TextInput/style.scss
+++ b/src/components/Form/TextInput/style.scss
@@ -11,7 +11,7 @@
   
     .input {
       padding: 12px 16px 12px 16px;
-      color: #808080;
+      color: #0b0b0b;
       border-radius: 8px;
       border: 1.5px solid #999999;
     }
